<resources>
    <string name="app_name">ViewZapps</string>
    <string name="loginWithFb"><b>Login with Facebook</b></string>
    <string name="loginWithInsta"><b>Login with Instagram</b></string>
    <string name="loginWithGoogle"><b>Login with Google</b></string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="refer">refer</string>
    <string name="friends">Friends</string>
    <string name="postYoursAds">Post Your Ad</string>
    <string name="aboutUs">About Us</string>
    <string name="rateUs">Rate US</string>
    <string name="logOut">Log Out</string>
    <string name="adminPostAd">Admin Post Ad</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="update">Update Profile</string>
    <string name="zapNumber">Zap No.</string>
    <string name="NA">N.A</string>
    <string name="youtubeAds"><b>Youtube Ads</b></string>
    <string name="videoTitle">Video Title</string>
    <string name="userUId">User Uid</string>
    <string name="videoUrlLink">Video Url</string>
    <string name="likes">Number of Likes Needed</string>
    <string name="views">Number of Views Needed</string>
    <string name="subscribe">Number of Subscribers Needed</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="hintPlaceholderL"><b>_____ __ _________ ______ </b></string>
    <string name="hintPlaceholderS"><b>______ _____</b></string>
    <string name="hintPlaceholderXS"><b>____</b></string>
    <string name="noItem"><b>Oops! There is no video at this moment. We will notify you.</b></string>
    <string name="youtubeDescription">View youtube videos and Earn Zaps!</string>
    <string name="adPreview"><b>Ad Preview</b></string>
    <string name="viewsLeft"><b>\nView Left</b></string>
    <string name="likesLeft"><b>\nLikes Left</b></string>
    <string name="subsLeft"><b>\nSubs Left</b></string>
    <string name="youtube"><b>Youtube</b></string>
    <string name="facebook"><b>Facebook</b></string>
    <string name="instagram"><b>Instagram</b></string>
    <string name="androidApps"><b>Android Apps</b></string>
    <string name="appleApps"><b>Apple Apps</b></string>
    <string name="view"><b>View</b></string>
    <string name="like"><b>Like</b></string>
    <string name="subscribeChannel"><b>Subscribe</b></string>
    <string name="movieTrailers"><b>Movie Trailers</b></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
