<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    android:clickable="true"
    android:focusable="true"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="enhabyto.com.viewzapps.Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/appColor"
            tools:ignore="ContentDescription" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            app:civ_shadow="true"
            app:civ_shadow_radius="10"
            app:civ_shadow_color="@color/appColor"
            android:id="@+id/profile_profileImage"
            android:background="@drawable/default_profile_image"
            />

        <!--name-->

        <util.android.textviews.FontTextView
            android:id="@+id/profile_nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/MyCustomTextStyleMedium"
            android:layout_below="@+id/profile_profileImage"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_left_margin"
            android:fontFamily="ubuntu"
            />

        <EditText
            android:id="@+id/profile_nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_nameTextView"
            style="@style/MyCustomEditTextStyle"
            android:background="@drawable/custom_rounded_rectangle_edit_text"
            android:drawableStart="@drawable/name_mini_icon"
            android:inputType="textCapWords"
            android:elevation="@dimen/elevation"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" />


        <!--email-->

        <util.android.textviews.FontTextView
            android:id="@+id/profile_emailTextView"
            android:layout_below="@+id/profile_nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/MyCustomTextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_left_margin"
            android:fontFamily="ubuntu"
            />

        <EditText
            android:id="@+id/profile_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_emailTextView"
            style="@style/MyCustomEditTextStyle"
            android:background="@drawable/custom_rounded_rectangle_edit_text"
            android:drawableStart="@drawable/mail_mini_icon"
            android:inputType="textEmailAddress"
            android:elevation="@dimen/elevation"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" />


        <!--phone number-->

        <util.android.textviews.FontTextView
            android:id="@+id/profile_phoneTextView"
            android:layout_below="@+id/profile_emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            style="@style/MyCustomTextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_left_margin"
            android:fontFamily="ubuntu"
            />

        <EditText
            android:id="@+id/profile_phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_phoneTextView"
            style="@style/MyCustomEditTextStyle"
            android:background="@drawable/custom_rounded_rectangle_edit_text"
            android:drawableStart="@drawable/phone_mini_icon"
            android:inputType="phone"
            android:elevation="@dimen/elevation"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" />

        <!--submit button-->

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/login_faceBookButton"
            android:layout_below="@+id/profile_phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderWidth="2dp"
            fancy:fb_iconPaddingRight="20dp"
            fancy:fb_defaultColor="@color/faceBookBlue"
            fancy:fb_focusColor="@color/appColor"
            fancy:fb_fontIconResource="&#xf14b;"
            fancy:fb_iconPosition="left"
            fancy:fb_fontIconSize="20dp"
            fancy:fb_radius="3dp"
            fancy:fb_text="@string/update"
            style="@style/MyCustomTextStyleMedium"
            fancy:fb_textColor="@color/loginButtonColors"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_left_margin"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:elevation="5dp"
            tools:targetApi="lollipop" />



    </RelativeLayout>

</FrameLayout>
