<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="enhabyto.com.viewzapps.EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/profile_headerImageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/appColor"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/profile_relativeLayout2"
            android:layout_marginTop="40dp"
            >

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                app:civ_shadow="true"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="@color/black"
                android:id="@+id/profile_profileImage"
                android:onClick="onClick"
                />

            <!--loading image-->
            <com.victor.loading.rotate.RotateLoading
                android:id="@+id/profile_rotateLoadingImage"
                android:layout_width="@dimen/rotateLoadingWidth"
                android:layout_height="@dimen/rotateLoadingHeight"
                app:loading_width="@dimen/rotateLoadingBreadth"
                app:loading_color="@color/black"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <!--back button-->
        <ImageButton
            android:id="@+id/profile_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_back_brown"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            tools:ignore="ContentDescription"
            android:elevation="@dimen/elevation_5dp"
            tools:targetApi="lollipop" />


        <!--name-->
        <TextView
            android:id="@+id/profile_nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/TextStyleMedium"
            android:layout_below="@+id/profile_relativeLayout2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:fontFamily="ubuntu"
            />

        <EditText
            android:id="@+id/profile_nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_nameTextView"
            style="@style/EditTextStyleMedium"
            android:background="@drawable/custom_rounded_rectangle_edit_text"
            android:drawableEnd="@drawable/ic_name_mini_icon"
            android:inputType="textCapWords"
            android:elevation="@dimen/elevation_5dp"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" />


        <!--email-->

        <TextView
            android:id="@+id/profile_emailTextView"
            android:layout_below="@+id/profile_nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/TextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:fontFamily="ubuntu"
            />

        <EditText
            android:id="@+id/profile_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_emailTextView"
            style="@style/EditTextStyleMedium"
            android:background="@drawable/custom_rounded_rectangle_edit_text"
            android:drawableEnd="@drawable/ic_email_mini_icon"
            android:inputType="textEmailAddress"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@color/black90"
            android:elevation="@dimen/elevation_5dp"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" />


        <!--phone number-->

        <TextView
            android:id="@+id/profile_phoneTextView"
            android:layout_below="@+id/profile_emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            style="@style/TextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:fontFamily="ubuntu"
            />

        <EditText
            android:id="@+id/profile_phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_phoneTextView"
            style="@style/EditTextStyleMedium"
            android:background="@drawable/custom_rounded_rectangle_edit_text"
            android:drawableEnd="@drawable/ic_phone_mini_icon"
            android:inputType="phone"
            android:elevation="@dimen/elevation_5dp"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" />

        <!--submit button-->

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/profile_submitButton"
            android:layout_below="@+id/profile_phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderWidth="2dp"
            fancy:fb_iconPaddingRight="20dp"
            fancy:fb_defaultColor="@color/faceBookBlue"
            fancy:fb_focusColor="@color/appColor"
            fancy:fb_fontIconResource="&#xf14b;"
            fancy:fb_iconPosition="left"
            fancy:fb_fontIconSize="20dp"
            fancy:fb_radius="3dp"
            fancy:fb_text="@string/update"
            style="@style/TextStyleMedium"
            fancy:fb_textColor="@color/loginButtonColors"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:layout_marginEnd="@dimen/activity_end_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:elevation="5dp"
            tools:targetApi="lollipop" />

        <!--loading-->
        <com.victor.loading.rotate.RotateLoading
            android:id="@+id/profile_rotateLoading"
            android:layout_width="@dimen/rotateLoadingWidth"
            android:layout_height="@dimen/rotateLoadingHeight"
            app:loading_width="@dimen/rotateLoadingBreadth"
            app:loading_color="@color/black"
            android:elevation="@dimen/elevation_5dp"
            tools:targetApi="lollipop"
            android:layout_centerInParent="true"/>


    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
