<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/fragment_container_Login"
    tools:context="enhabyto.com.viewzapps.Login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="ContentDescription"
        android:id="@+id/login_topImageView"
        android:background="@color/appColor"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_rectangle_layout"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:elevation="@dimen/elevation"
        tools:targetApi="lollipop"
        android:id="@+id/login_relativeLayout2"
        android:visibility="invisible"
        >


        <pl.droidsonroids.gif.GifImageView
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:background="@drawable/app_logo_gif"
            android:id="@+id/login_appLogoImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="vertical"
            android:layout_below="@+id/login_appLogoImageView"
            >


            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/login_googleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderWidth="2dp"
                fancy:fb_iconPaddingRight="20dp"
                fancy:fb_defaultColor="@color/googleGreen"
                fancy:fb_focusColor="@color/appColor"
                fancy:fb_fontIconResource="&#xf1a0;"
                fancy:fb_iconPosition="left"
                fancy:fb_fontIconSize="20dp"
                fancy:fb_radius="3dp"
                fancy:fb_text="@string/loginWithGoogle"
                style="@style/MyCustomTextStyleMedium"
                fancy:fb_textColor="@color/loginButtonColors"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                android:layout_marginStart="@dimen/activity_start_margin"
                android:layout_marginEnd="@dimen/activity_end_margin"
                android:elevation="@dimen/elevation"
                tools:targetApi="lollipop"
                />


            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/login_instaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderWidth="2dp"
                fancy:fb_iconPaddingRight="20dp"
                fancy:fb_defaultColor="@color/lightCoral"
                fancy:fb_focusColor="@color/appColor"
                fancy:fb_fontIconResource="&#xf16d;"
                fancy:fb_iconPosition="left"
                fancy:fb_fontIconSize="20dp"
                fancy:fb_radius="3dp"
                fancy:fb_text="@string/loginWithInsta"
                style="@style/MyCustomTextStyleMedium"
                fancy:fb_textColor="@color/loginButtonColors"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_start_margin"
                android:layout_marginEnd="@dimen/activity_end_margin"
                android:elevation="@dimen/elevation"
                tools:targetApi="lollipop" />


            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/login_faceBookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderWidth="2dp"
                fancy:fb_iconPaddingRight="20dp"
                fancy:fb_defaultColor="@color/faceBookBlue"
                fancy:fb_focusColor="@color/appColor"
                fancy:fb_fontIconResource="\uf082"
                fancy:fb_iconPosition="left"
                fancy:fb_fontIconSize="20dp"
                fancy:fb_radius="3dp"
                fancy:fb_text="@string/loginWithFb"
                style="@style/MyCustomTextStyleMedium"
                fancy:fb_textColor="@color/loginButtonColors"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_start_margin"
                android:layout_marginEnd="@dimen/activity_end_margin"
                android:layout_marginBottom="16dp"
                android:elevation="@dimen/elevation"
                tools:targetApi="lollipop" />



        </LinearLayout>


    </RelativeLayout>


        <pl.droidsonroids.gif.GifImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/money"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/login_gif"
            android:visibility="invisible"
            />


        <!--loading image-->
        <com.victor.loading.rotate.RotateLoading
            android:id="@+id/login_rotateLoading"
            android:layout_width="@dimen/rotateLoadingWidth"
            android:layout_height="@dimen/rotateLoadingHeight"
            app:loading_width="@dimen/rotateLoadingBreadth"
            app:loading_color="@color/black"
            android:elevation="@dimen/elevation"
            tools:targetApi="lollipop"
            android:layout_centerInParent="true"/>


    </RelativeLayout>


</FrameLayout>
